notifiable comp and energy